[gd_scene load_steps=66 format=3 uid="uid://cro3xt3nilril"]

[ext_resource type="Texture2D" uid="uid://celdskpsgjihq" path="res://Sprites/Characters/clockwing_idle.png" id="1_eeu8b"]
[ext_resource type="Script" path="res://Scripts/player_unit.gd" id="2_8axic"]
[ext_resource type="Script" path="res://Scripts/ENEMY_AI.gd" id="3_k0ypu"]
[ext_resource type="Texture2D" uid="uid://dt76maulpwdd7" path="res://Sprites/Characters/enemy/enemy_idle.png" id="4_pfkbs"]
[ext_resource type="Texture2D" uid="uid://bv4ln1swcpwpe" path="res://Sprites/Characters/enemy/enemy_idle_faceback.png" id="5_6hnwa"]
[ext_resource type="Texture2D" uid="uid://3kqk2gwip387" path="res://Sprites/Characters/enemy/enemy_walk.png" id="6_abpbp"]
[ext_resource type="Texture2D" uid="uid://bfgbx1g670wua" path="res://Sprites/UI/damage_overhead.png" id="6_b00vw"]
[ext_resource type="FontFile" uid="uid://dp5c3byjts7yw" path="res://Sprites/UI/dogica/OTF/dogica.otf" id="7_guvwx"]
[ext_resource type="Texture2D" uid="uid://gw6x4mf66i3t" path="res://Sprites/Characters/enemy/enemy_walk_faceback.png" id="7_vkhhr"]
[ext_resource type="FontFile" uid="uid://c4aoq70jhlfo" path="res://Sprites/UI/dogica/TTF/dogica.ttf" id="8_5x0ks"]
[ext_resource type="PackedScene" uid="uid://cm28u8g72cdbd" path="res://Prefabs/UI/select_key_indicator.tscn" id="9_8vp3w"]
[ext_resource type="PackedScene" uid="uid://ckstdvx1288y8" path="res://Prefabs/Unit Ghosts/default_character_ghost.tscn" id="10_tb7sl"]
[ext_resource type="PackedScene" uid="uid://vofy6gq6oex7" path="res://Prefabs/UI/action_buttons.tscn" id="11_tysw0"]
[ext_resource type="Texture2D" uid="uid://bb02s0y20ll1" path="res://Sprites/UI/typeindicators.png" id="12_rs64i"]
[ext_resource type="Script" path="res://Scripts/crit_ui.gd" id="13_8if30"]
[ext_resource type="Script" path="res://Scripts/particle_manager.gd" id="14_p2gpn"]
[ext_resource type="Texture2D" uid="uid://d0bp8bl0nsupj" path="res://Sprites/Attack Particles/waterbubble.png" id="15_mny6f"]
[ext_resource type="Texture2D" uid="uid://bly517w00tmda" path="res://Sprites/Attack Particles/rock.png" id="16_bcoqn"]
[ext_resource type="Texture2D" uid="uid://c7dwjvnbvgoks" path="res://Sprites/Attack Particles/ember.png" id="17_bjww4"]
[ext_resource type="Texture2D" uid="uid://bkqfrwbmmk0a3" path="res://Sprites/Attack Particles/airstream.png" id="18_pjb7g"]
[ext_resource type="Texture2D" uid="uid://bl12v4a7frewu" path="res://Sprites/Attack Particles/light.png" id="19_uro51"]
[ext_resource type="AudioStream" uid="uid://cto7yssg2ttx5" path="res://SFX/unit_select.mp3" id="20_vj76w"]
[ext_resource type="AudioStream" uid="uid://c65kbxxdvxw2v" path="res://SFX/Attack SFX/water.wav" id="21_qkis5"]
[ext_resource type="AudioStream" uid="uid://bidobmbwcv8mg" path="res://SFX/Attack SFX/earth.mp3" id="22_iyalm"]
[ext_resource type="AudioStream" uid="uid://ri02s6gh3raf" path="res://SFX/Attack SFX/fire.mp3" id="23_u2jap"]
[ext_resource type="AudioStream" uid="uid://c3310p3hoo3uh" path="res://SFX/Attack SFX/air.wav" id="24_cuaot"]
[ext_resource type="AudioStream" uid="uid://x3kl728ir8ly" path="res://SFX/Attack SFX/shadow.mp3" id="25_5btwl"]
[ext_resource type="AudioStream" uid="uid://ctj004ws56irt" path="res://SFX/Attack SFX/light.mp3" id="26_67ear"]

[sub_resource type="Animation" id="Animation_6y2sy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_eeu8b")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2hflg"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_pfkbs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_02kul"]
resource_name = "idle_fb"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6hnwa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_8ljtx"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_abpbp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_l0of1"]
resource_name = "walk_faceback"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_vkhhr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tulgk"]
_data = {
"RESET": SubResource("Animation_6y2sy"),
"idle": SubResource("Animation_2hflg"),
"idle_fb": SubResource("Animation_02kul"),
"walk": SubResource("Animation_8ljtx"),
"walk_faceback": SubResource("Animation_l0of1")
}

[sub_resource type="LabelSettings" id="LabelSettings_1fdbt"]
font = ExtResource("8_5x0ks")
font_size = 8
font_color = Color(1, 0.956863, 0.678431, 1)
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.427451)
shadow_offset = Vector2(0.5, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qexd2"]
font = ExtResource("8_5x0ks")
font_size = 8
font_color = Color(0.984314, 0.721569, 0.635294, 1)
shadow_color = Color(0, 0, 0, 0.360784)

[sub_resource type="LabelSettings" id="LabelSettings_6dt27"]
font_size = 8
outline_size = 1
outline_color = Color(1, 0, 0, 1)
shadow_color = Color(0.305882, 0, 0, 0.933333)

[sub_resource type="LabelSettings" id="LabelSettings_mmd78"]
font_size = 8
font_color = Color(1, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.882353)

[sub_resource type="Curve" id="Curve_taqby"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.153846), -2.77223, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_urgfc"]
curve = SubResource("Curve_taqby")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xyfvi"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -32, 0)
emission_shape = 3
emission_box_extents = Vector3(8, 1, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 98, 0)
scale_min = 0.25
scale_max = 0.75
alpha_curve = SubResource("CurveTexture_urgfc")

[sub_resource type="Gradient" id="Gradient_y3f5j"]
offsets = PackedFloat32Array(0.754098, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rx018"]
gradient = SubResource("Gradient_y3f5j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0qaov"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -52, 0)
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 150, 0)
scale_min = 2.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_rx018")

[sub_resource type="Curve" id="Curve_7cdmk"]
_data = [Vector2(0.253333, 0.989011), 0.0, 0.0, 0, 0, Vector2(0.64, 0.197802), -4.78022, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ls3xd"]
curve = SubResource("Curve_7cdmk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gyh0b"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(5, 0, 1)
direction = Vector3(0, -1, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -15.0
angular_velocity_max = 15.0
gravity = Vector3(0, 250, 0)
scale_min = 0.5
scale_max = 0.75
scale_curve = SubResource("CurveTexture_ls3xd")

[sub_resource type="Curve" id="Curve_63kyb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.494505), -4.12088, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gp46h"]
curve = SubResource("Curve_63kyb")

[sub_resource type="Curve" id="Curve_6pm2l"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.98, 0.131868), -4.12088, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fdfuk"]
curve = SubResource("Curve_6pm2l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ac5l6"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector3(0, -1, 0)
spread = 20.0
flatness = 0.2
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_min = 0.5
scale_curve = SubResource("CurveTexture_fdfuk")
alpha_curve = SubResource("CurveTexture_gp46h")
turbulence_noise_strength = 0.2
turbulence_noise_scale = 1.0

[sub_resource type="Curve" id="Curve_0s3qq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.043956), -9.68407, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_60fqw"]
curve = SubResource("Curve_0s3qq")

[sub_resource type="Curve" id="Curve_se7yu"]
_data = [Vector2(0.0466667, 0.406593), 0.0, 0.268336, 0, 0, Vector2(0.68, 0.252747), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4mmr8"]
curve = SubResource("Curve_se7yu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j7fwx"]
particle_flag_disable_z = true
gravity = Vector3(0, -48, 0)
scale_curve = SubResource("CurveTexture_4mmr8")
alpha_curve = SubResource("CurveTexture_60fqw")

[sub_resource type="Curve" id="Curve_qxhsu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.746667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.208791), -4.56467, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_8awxs"]
curve = SubResource("Curve_qxhsu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q8jwm"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -28, 0)
gravity = Vector3(0, 18, 0)
color = Color(0.415686, 0, 0.419608, 0.933333)
alpha_curve = SubResource("CurveTexture_8awxs")

[sub_resource type="Curve" id="Curve_huest"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.153333, 0.879121), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(0.826667, 0.879121), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_30u76"]
curve = SubResource("Curve_huest")

[sub_resource type="Curve" id="Curve_ds2lc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_isw7b"]
curve = SubResource("Curve_ds2lc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1353w"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector3(0, -24, 0)
scale_min = 0.25
scale_max = 0.75
scale_curve = SubResource("CurveTexture_isw7b")
alpha_curve = SubResource("CurveTexture_30u76")

[node name="EnemyCharacter" type="Sprite2D"]
z_index = 3
texture = ExtResource("1_eeu8b")
offset = Vector2(0, -12)
hframes = 12
script = ExtResource("2_8axic")
is_player = false

[node name="ENEMY_AI" type="Node" parent="."]
script = ExtResource("3_k0ypu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tulgk")
}

[node name="DamageOverhead" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -36)
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_b00vw")
hframes = 3

[node name="DamageLabel" type="Label" parent="DamageOverhead"]
y_sort_enabled = true
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.115
anchor_right = 0.937
anchor_bottom = 0.458
offset_left = -15.984
offset_top = -16.0133
offset_right = -15.984
offset_bottom = -15.9893
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("7_guvwx")
theme_override_font_sizes/font_size = 8
text = "999"
label_settings = SubResource("LabelSettings_1fdbt")
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="PercentToHitLabel" type="Label" parent="DamageOverhead"]
y_sort_enabled = true
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.583
anchor_right = 0.867
anchor_bottom = 0.758
offset_left = -16.0107
offset_top = -15.9893
offset_right = -6.41067
offset_bottom = -13.5893
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("7_guvwx")
theme_override_font_sizes/font_size = 8
text = "100%"
label_settings = SubResource("LabelSettings_qexd2")
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="SelectKeyIndicator" parent="." instance=ExtResource("9_8vp3w")]
visible = false

[node name="MovementGhost" parent="." instance=ExtResource("10_tb7sl")]
visible = false

[node name="ActionButtons" parent="." instance=ExtResource("11_tysw0")]
visible = false
z_index = 1
position = Vector2(26, -23)

[node name="HealthBar" type="Node2D" parent="."]
z_index = 9

[node name="TypeIndicator" type="Sprite2D" parent="HealthBar"]
position = Vector2(5.5, 2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_rs64i")
hframes = 6

[node name="HealthLabel" type="Label" parent="HealthBar"]
y_sort_enabled = true
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.115
anchor_right = 0.937
anchor_bottom = 0.458
offset_left = -12.0
offset_top = -1.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("7_guvwx")
theme_override_font_sizes/font_size = 8
text = "99
"
label_settings = SubResource("LabelSettings_6dt27")
horizontal_alignment = 2
vertical_alignment = 1
text_direction = 1

[node name="CritIndicator" type="Node2D" parent="."]
visible = false
script = ExtResource("13_8if30")

[node name="HealthLabel2" type="Label" parent="CritIndicator"]
y_sort_enabled = true
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.115
anchor_right = 0.937
anchor_bottom = 0.458
offset_left = -12.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = -6.0
grow_horizontal = 2
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("7_guvwx")
theme_override_font_sizes/font_size = 8
text = "CRIT"
label_settings = SubResource("LabelSettings_mmd78")
horizontal_alignment = 2
vertical_alignment = 1
text_direction = 1

[node name="ParticleManager" type="Node2D" parent="."]
script = ExtResource("14_p2gpn")

[node name="WaterAttackParticles" type="GPUParticles2D" parent="ParticleManager"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_xyfvi")
texture = ExtResource("15_mny6f")
lifetime = 0.8
one_shot = true
speed_scale = 1.2
trail_sections = 4

[node name="EarthAttackParticles" type="GPUParticles2D" parent="ParticleManager"]
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_0qaov")
texture = ExtResource("16_bcoqn")
lifetime = 0.8
one_shot = true
explosiveness = 1.0

[node name="EarthFollowupParticles" type="GPUParticles2D" parent="ParticleManager/EarthAttackParticles"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_gyh0b")
texture = ExtResource("16_bcoqn")
lifetime = 0.7
one_shot = true
explosiveness = 0.9

[node name="FireAttackParticles" type="GPUParticles2D" parent="ParticleManager"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_ac5l6")
texture = ExtResource("17_bjww4")
lifetime = 0.8
one_shot = true
explosiveness = 0.8

[node name="AirAttackParticles" type="GPUParticles2D" parent="ParticleManager"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_j7fwx")
texture = ExtResource("18_pjb7g")
one_shot = true

[node name="ShadowAttackParticles" type="GPUParticles2D" parent="ParticleManager"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_q8jwm")
texture = ExtResource("18_pjb7g")
lifetime = 1.5
one_shot = true

[node name="LightAttackParticles" type="GPUParticles2D" parent="ParticleManager"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_1353w")
texture = ExtResource("19_uro51")
one_shot = true

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_vj76w")
volume_db = 1.0

[node name="AttackSFX" type="Node" parent="."]

[node name="WaterSFX" type="AudioStreamPlayer" parent="AttackSFX"]
stream = ExtResource("21_qkis5")
volume_db = -3.0

[node name="EarthSFX" type="AudioStreamPlayer" parent="AttackSFX"]
stream = ExtResource("22_iyalm")
volume_db = -3.0

[node name="FireSFX" type="AudioStreamPlayer" parent="AttackSFX"]
stream = ExtResource("23_u2jap")
volume_db = -3.0

[node name="AirSFX" type="AudioStreamPlayer" parent="AttackSFX"]
stream = ExtResource("24_cuaot")
volume_db = -3.0

[node name="ShadowSFX" type="AudioStreamPlayer" parent="AttackSFX"]
stream = ExtResource("25_5btwl")
volume_db = -6.0

[node name="LightSFX" type="AudioStreamPlayer" parent="AttackSFX"]
stream = ExtResource("26_67ear")
volume_db = -5.0
